# simple_embedded_cpp

./: CMakeLists.txt  FreeRTOSConfig.h  LICENSE  Makefile  linker.ld  readme.md  startup.S  startup.s  toolchain-arm-none-eabi.cmake
docs/: stm32vl_qemu_project_documentation_expanded.md  stm32vl_qemu_project_documentation_full.md
include/: FreeRTOSConfig.h
src/: main.cpp
